<resources>
    <string name="app_name">Focus Sign Up</string>

    <string name="frame_4034">frame_4034</string>
    <string name="logo">logo</string>

    <string name="registration">Регистрация</string>
    <string name="button_account_exists">Есть аккаунт</string>
    <string name="button_save">Сохранить</string>
    <string name="edit_text_name">Имя</string>
    <string name="edit_text_email">Электронная почта</string>
    <string name="edit_text_password">Пароль</string>
    <string name="edit_text_confirm_password">Подтверждение пароля</string>

    <string name="username_empty_error">Имя пользователя не может быть пустым</string>
    <string name="username_length_error">Имя пользователя должно быть от 1 до 35 символов</string>
    <string name="email_format_error">Неверный формат электронной почты</string>
    <string name="email_length_error">Электронная почта должна быть не длиннее 50 символов</string>
    <string name="password_length_error">Пароль должен быть от 5 до 64 символов</string>
    <string name="password_mismatch_error">Пароли не совпадают</string>
    <string name="user_exists_error">Пользователь уже существует</string>

    <string name="registration_successful">Пользователь успешно зарегистрирован!</string>
</resources>